# soundtracker

./: AUTHORS  ChangeLog  FAQ  Makefile.am  Makefile.in  NEWS  README  README.md  ROADMAP  TODO  TODO.extra  cheat-sheet.C.txt  cheat-sheet.ru.txt  configure.ac  sample-editor.ui  sample-editor.xml  soundtracker.appdata.xml  soundtracker.desktop  soundtracker.glade  soundtracker.ui
app/: Makefile.am  audio-subs.c  audio-subs.h  audio.c  audio.h  audioconfig.c  audioconfig.h  cheat-sheet.c  cheat-sheet.h  clavier.c  clavier.h  clock.c  clock.h  colors.c  colors.h  customdrawing.c  customdrawing.h  draw-interlayer.c  draw-interlayer.h  driver.h  endian-conv.c  endian-conv.h  envelope-box.c  envelope-box.h  errors.c  errors.h  event-waiter.c  event-waiter.h  extspinbutton.c  extspinbutton.h  file-operations.c  file-operations.h  gui-settings.c  gui-settings.h  gui-subs.c  gui-subs.h  gui.c  gui.h  history.c  history.h  (+57 more)
app/drivers/: Makefile.am  alsa1x.c  driver-subs.h  driver-thread.h  dsound-output.c  dummy-drivers.c  irix-output.c  jack.c  oss.c  pulse-output.c  sdl-output.c  sun-input.c  sun-output.c
app/mixers/: Makefile.am  integer32.c  kbfloat-core.c  kbfloat-core.h  kbfloat.c
debian/: changelog  control  copyright  docs  rules
debian/source/: include-binaries
doc/: hacking.texi  keybindings.odt  xi.txt
extensions/sample-editor/: sox.menu
icons/: led_off.xpm  led_on.xpm  play_block.xpm
po/: Makevars  POTFILES.in  da.gmo  da.po  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  es.gmo  es.po  fr.gmo  fr.po  gl.gmo  gl.po  hr.gmo  hr.po  it.gmo  it.po  ja.gmo  ja.po  no.gmo  no.po  pl.gmo  pl.po  ru.gmo  ru.po  rw.gmo  rw.po  scan-extensions.pl  sk.gmo  sk.po  sl.gmo  sl.po  soundtracker.pot  sv.gmo  sv.po  tr.gmo  tr.po  (+2 more)
